--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "./altimeter-web-app",
+  "start_url": "https://c-bohling.github.io/altimeter-web-app/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
